// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text -- Web should have the correct font family 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "Roboto",
        "margin": 0,
      },
      Object {
        "fontStyle": "italic",
      },
      Object {
        "fontWeight": "700",
      },
    ]
  }
>
  Lorem
</Text>
`;

exports[`Text -- Web should have the default font family -- EXPO 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "Roboto",
        "margin": 0,
      },
    ]
  }
>
  Lorem
</Text>
`;

exports[`Text -- Web should have the default font family -- EXPO 2`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "Roboto",
        "margin": 0,
      },
      Object {
        "fontWeight": "700",
      },
    ]
  }
>
  Lorem
</Text>
`;

exports[`Text -- Web should have the default font family -- EXPO 3`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "Roboto",
        "margin": 0,
      },
      Object {
        "fontStyle": "italic",
      },
    ]
  }
>
  Lorem
</Text>
`;

exports[`Text -- Web should have the default font family -- EXPO 4`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "Roboto",
        "margin": 0,
      },
      Object {
        "fontStyle": "italic",
      },
      Object {
        "fontWeight": "700",
      },
    ]
  }
>
  Lorem
</Text>
`;
